--- a/examples/square/index.html
+++ b/examples/square/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <script src="./square.ts" type="module"></script>
-  <canvas id="canvas" width="400" height="400" style="position: absolute; top: 0; left: 0;"></canvas>
+  <canvas id="canvas" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></canvas>
 </body>
 </html>
